<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssl_slam2</name>
  <version>0.0.0</version>

  <description>
    This code is an implementation of paper "Lightweight 3-D Localization and Mapping for Solid-State LiDAR", published in IEEE Robotics and Automation Letters, 2021
  </description>

  <maintainer email="wh200720041@gmail.com">Han Wang</maintainer>

  <license>BSD</license>
  <url>https://wanghan.pro</url>
  <author email="wh200720041@gmail.com">Han Wang</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>  
  <depend>std_srvs</depend>
  <depend>rosbag2</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
